# primary

./: .gitignore  2emgrenahkcs6vitbscnrj4chrjvmjnh  68ojjrpbcsu8gvoig7mdfdbbhugvcmcg.darc  AGENTS-extended.md  AGENTS.md  ARCHITECTURE.md  ESSENCE.md  GOALS.md  INTENT.md  NON_IDEAL_AGENTS.md  ONBOARDING.md  RECENT-REPOSITORIES.md  claude-agent-lojix-guidance-fix.md  context.md  criomos-test-cluster-merge-attempt.md  criomos-user-rename-bead.md  fgee1rgbtqf11ebdvkov1nqiqqohbdlu.darc  flake.nix  librust_out.rmeta  local-session-harness-scout.md  lojix-consumer-nix-audit.md  lojix-core-audit-fixes.md  lojix-core-nonlegacy-implementation-continue.md  lojix-core-rust-audit.md  lojix-core-rust-reaudit.md  lojix-final-holistic-reaudit.md  lojix-holistic-blocker-fixes.md  lojix-holistic-reaudit.md  lojix-nonlegacy-closeout.md  lojix-nonlegacy-holistic-audit.md  lojix-nonlegacy-redesign-plan.md  lojix-primary-final-closeout.md  lojix-run-consumer-deletion-implementation.md  lojix-run-deletion-migration-map.md  manifest  pkmlp0jlkcapei30rcij5khdddgtelcn  primary.code-workspace  research-session-harnesses.md  session-manager-architecture-research.md  spiritbackup.nota
.beads/: metadata.json
.claude/: settings.json
.claude/agents/: criomos-implementer.md  crucial-greenfield-developer-for-claude.md  general-code-implementer.md  generalist.md  helper-only-explorer.md  intent-curator.md  intent-maintainer.md  intent-recorder.md  intent-translator.md  manager.md  nix-auditor.md  operating-system-implementer.md  repo-operator.md  repo-scaffolder.md  repository-closeout.md  rust-auditor.md  scout.md  skill-editor.md  tracker-weaver.md  weave-operator.md
.claude/commands/: helper-only.md  intent-led-orchestration.md
.codex/agents/: criomos-implementer.toml  crucial-greenfield-developer-for-chatgpt.toml  general-code-implementer.toml  generalist.toml  helper-only-explorer.toml  intent-curator.toml  intent-maintainer.toml  intent-recorder.toml  intent-translator.toml  manager.toml  nix-auditor.toml  operating-system-implementer.toml  repo-operator.toml  repo-scaffolder.toml  repository-closeout.toml  rust-auditor.toml  scout.toml  skill-editor.toml  tracker-weaver.toml  weave-operator.toml
.codex/commands/: helper-only.md  intent-led-orchestration.md
.codex/prompts/: helper-only.md  intent-led-orchestration.md
.pi-subagents/artifacts/: 15f05c72_generalist_input.md  15f05c72_generalist_meta.json  15f05c72_generalist_output.md  15f05c72_generalist_transcript.jsonl  1d1794c6_generalist_input.md  1d1794c6_generalist_meta.json  1d1794c6_generalist_transcript.jsonl  2b7cbde3-7e58-4609-b998-a6cbe6bd5b6d_generalist_input.md  2b7cbde3-7e58-4609-b998-a6cbe6bd5b6d_generalist_transcript.jsonl  361d4792-2e0a-4846-8281-8d192fcb62c6_generalist_input.md  361d4792-2e0a-4846-8281-8d192fcb62c6_generalist_meta.json  361d4792-2e0a-4846-8281-8d192fcb62c6_generalist_output.md  361d4792-2e0a-4846-8281-8d192fcb62c6_generalist_transcript.jsonl  3aea97f0_generalist_input.md  3aea97f0_generalist_meta.json  3aea97f0_generalist_output.md  (+44 more)
.playwright-mcp/: page-2026-07-03T08-23-23-807Z.yml
agent-outputs/: Handover-Orchestrate-RustAudit-SEMAEpic.md  Handover-OrchestrateDaemon-Fix-and-RootCause.md  Handover-SpiritIntent-and-Deployment.md  RustAudit-Orchestrate-RuntimePaths.md  repo-mess-overhaul-handover.md
firstmate-bridge/: .gitignore  AGENTS.md  README.md
intent/: arca.nota  component-shape.nota  deploy.nota  horizon.nota  intent-log.nota  jj.nota  markdown.nota  naming.nota  nix.nota  nota-mixed-enum-support.nota  nota.nota  orchestrate.nota  persona.nota  reports.nota  signal.nota  spirit.nota  workspace.nota
oed3aakac8gjgm2207ibv4d9b38jgenf.darc/: 0002
orchestrate/: AGENTS.md  ARCHITECTURE.md  orchestrate.redb  roles.list  worktrees.nota
orchestrate-cli/: Cargo.toml
orchestrate-cli/src/: claim.rs  daemon_client.rs  error.rs  lane.rs  lib.rs  lockfile.rs  overlap.rs  registry.rs  render.rs  request.rs  scope.rs  verify_jj.rs  workspace.rs
orchestrate-cli/tests/: argv_decode.rs  claim_release.rs  lock_file.rs  overlap.rs  registry.rs  scope.rs
protocols/: active-repositories.md  cloud-maintainer-browser-profile.md  orchestration.md  repos-manifest.nota  retired-lanes.md
release-trains/: language-family-slice-three.nota
reports/: 1-gas-city-fiasco.md  2-primary-handoff.md  2026-05-06-primary-handoff.md  HANDOVER-2026-07-01-goldragon-commit-format-doctrine.md  codex-rust-construct-survey.md  harness-remote-control-interfaces.md  schema-redesign-port-readiness-scout.md
reports/designer/694-cluster-propagation-poc/harness/: Cargo.toml
reports/designer/694-cluster-propagation-poc/harness/src/: criome_quorum.rs  glue.rs  lib.rs  router_fanout.rs  spirit_propagation.rs
reports/designer/694-cluster-propagation-poc/harness/tests/: criome_quorum.rs  end_to_end.rs  router_fanout.rs  spirit_propagation.rs
reports/schema-designer/poc/: Cargo.toml
reports/schema-designer/poc/examples/: demo.rs
reports/schema-designer/poc/src/: generated.rs  lib.rs  render.rs
reports/schema-designer/poc/tests/: help.rs  roundtrip.rs
skills/: README.md  abstractions.md  actor-systems.md  alignment-interview.md  architectural-truth-tests.md  architecture-editor.md  assistant.md  autonomous-agent.md  bead-weaver.md  beads.md  beauty.md  component-triad.md  context-handover.md  context-maintenance-deep.md  context-maintenance.md  contract-repo.md  counselor.md  designer-assistant.md  designer.md  double-implementation-strategy.md  editor.md  engine-analysis.md  engine-report.md  enum-contact-points.md  feature-development.md  generated-role-outputs.nota  helper-only.md  human-interaction.md  intent-alignment.md  intent-clarification.md  intent-led-orchestration.md  intent-log.md  intent-maintenance.md  intent-manifestation.md  jj.md  kameo.md  keep-working.md  language-design.md  library.md  main-next.md  (+48 more)
tools/: engine-situation  helper-only-brief  jj-branch-queue  nix-local-stack  orchestrate
tools/wezterm-palette-rpc-test/: Cargo.toml  README.md  run
tools/wezterm-palette-rpc-test/src/: error.rs  main.rs
(+4225 files in other folders)
