[package]
name         = "orchestrate-cli"
version      = "0.2.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
publish      = false
description  = "Workspace coordination helper — compatibility surface over the orchestrate daemon."

[lib]
name = "orchestrate_cli"
path = "src/lib.rs"

[[bin]]
name = "orchestrate"
path = "src/bin/orchestrate.rs"

[dependencies]
signal-orchestrate      = { git = "https://github.com/LiGoldragon/signal-orchestrate.git", branch = "main" }
meta-signal-orchestrate = { git = "https://github.com/LiGoldragon/meta-signal-orchestrate.git", branch = "main" }
signal-frame            = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
nota-next               = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror               = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
