[package]
name    = "cluster-propagation-poc"
version = "0.0.0"
edition = "2024"
publish = false

# Self-contained designer-lane witness for the spirit/criome/router cluster
# propagation loop (report 694). Touches NO repo under /git; depends on the
# real component crates via git deps. The harness owns ONLY the 3-instance
# wiring + the propagation glue + the falsifiable end-to-end test.
#
# CHAIN-UNIFICATION FINDING (verified this session): criome main advanced past
# the design's snapshot and MIGRATED to the NEW schema chain (schema-rust-next
# bb4dfe29, 3-field `AuthorizationEvaluation`). router ce578f1, spirit fe04c12,
# and mirror b26c139 are still on the OLD chain (schema-rust-next 733b76d); the
# chains rename signal-* fields to newtypes and CANNOT coexist (router ce578f1
# fails 89 type errors against NEW signal-router). The whole loop is buildable
# only on ONE chain, so we pin the OLD chain everywhere: criome=22801af (the
# last OLD-chain criome, 2-field `AuthorizationEvaluation { contract, evidence }`).
#
# Every signal-* crate carries `links = "signal-<name>"`, so each may appear in
# the graph exactly once. The daemon manifests pull their signal-* via
# `branch=main` (NEW HEADs); cargo 1.96 cannot `[patch]` a git source with a
# different rev of the SAME git URL. The only working override is a PATH `[patch]`
# to a local clone at the OLD rev (a different source kind). Those clones live
# under /tmp/cpp-deps (created by the harness setup, NOT a /git repo).

[lib]
name = "cluster_propagation_poc"
path = "src/lib.rs"

[dependencies]
# --- daemon crates: OLD-chain revs (their transitive signal-* are path-patched) ---
criome = { git = "https://github.com/LiGoldragon/criome.git", rev = "22801af", features = ["nota-text"] }
spirit = { git = "https://github.com/LiGoldragon/spirit.git", rev = "fe04c12", features = ["mirror-shipper"] }
# mirror is `branch=main` (HEAD == b26c139, on schema-rust-next 733b76d — the
# SAME chain as criome 22801af / router ce578f1 / spirit fe04c12). It MUST use
# the identical source spec spirit's `mirror-shipper` feature uses
# (`branch=main`), or cargo treats `?rev=X` and `?branch=main#X` as two copies
# of the same commit and the ship/restore types stop matching. (mirror 91ec76fa
# migrated to schema-rust-next 6e04d70 whose codegen REJECTS the OLD chain's
# field syntax — `RetiredStructFieldSyntax`.)
mirror = { git = "https://github.com/LiGoldragon/mirror.git", branch = "main", default-features = false }
router = { git = "https://github.com/LiGoldragon/router.git", rev = "ce578f1" }

# --- signal-* used directly by the harness (path → OLD rev via [patch] below) ---
signal-criome      = { git = "https://github.com/LiGoldragon/signal-criome.git", branch = "main" }
signal-standard    = { git = "https://github.com/LiGoldragon/signal-standard.git", branch = "main", default-features = false }
signal-mirror      = { git = "https://github.com/LiGoldragon/signal-mirror.git", branch = "main" }
meta-signal-mirror = { git = "https://github.com/LiGoldragon/meta-signal-mirror.git", branch = "main" }

# --- shared engine + framing (locked to OLD schema chain, spirit fe04c12 revs) ---
# sema-engine `branch=main` (HEAD == 73eea24) — same source spec the daemon
# legs use, so the single copy unifies (spirit's own lock wants ebee6e4, but at
# branch=main spirit resolves 73eea24 too; one copy, types match across legs).
sema-engine      = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame     = { git = "https://github.com/LiGoldragon/signal-frame.git", rev = "e2eae5c28dac47eea6c4c641b60c4fd27bb547d8" }
triad-runtime    = { git = "https://github.com/LiGoldragon/triad-runtime.git", rev = "f46f66ee4f16d5774c6c3889e1d3c162ddac3811" }
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", rev = "733b76d39cbd3009bedd22899f2695b7d68b283a" }
nota-next        = { git = "https://github.com/LiGoldragon/nota-next.git", rev = "7426a6a7d60d6e37ac40df4ecc98717af58129f8" }
schema-next      = { git = "https://github.com/LiGoldragon/schema-next.git", rev = "1de72dde6241b15299cd37fe096b3ef0e2f618b6" }
kameo            = { version = "0.20", default-features = false, features = ["macros", "tracing"] }
# rkyv decodes the mirror restore bundle's versioned-log suffix (same features
# sema-engine/signal-mirror use, so the archived layout matches).
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"

# Path patches: redirect EVERY git reference to these signal-* repos (direct or
# transitive `branch=main`) to a local clone at the OLD-chain rev. A path source
# is a different source kind than the git source being replaced, which cargo
# accepts (unlike a same-URL git->git patch). This is the one mechanism that
# unifies the `links`-bearing signal-* crates onto the single OLD chain.
[patch."https://github.com/LiGoldragon/signal-criome.git"]
signal-criome = { path = "/tmp/cpp-deps/signal-criome" }

[patch."https://github.com/LiGoldragon/signal-standard.git"]
signal-standard = { path = "/tmp/cpp-deps/signal-standard" }

[patch."https://github.com/LiGoldragon/signal-router.git"]
signal-router = { path = "/tmp/cpp-deps/signal-router" }

[patch."https://github.com/LiGoldragon/signal-spirit.git"]
signal-spirit = { path = "/tmp/cpp-deps/signal-spirit" }

[patch."https://github.com/LiGoldragon/signal-mirror.git"]
signal-mirror = { path = "/tmp/cpp-deps/signal-mirror" }

[patch."https://github.com/LiGoldragon/meta-signal-spirit.git"]
meta-signal-spirit = { path = "/tmp/cpp-deps/meta-signal-spirit" }

[patch."https://github.com/LiGoldragon/meta-signal-mirror.git"]
meta-signal-mirror = { path = "/tmp/cpp-deps/meta-signal-mirror" }

# router's transitive signal-* (signal-message/persona/mind/harness, the agent
# pair, signal-sema, meta-signal-router) — all OLD-chain, all path-patched.
[patch."https://github.com/LiGoldragon/signal-message.git"]
signal-message = { path = "/tmp/cpp-deps/signal-message" }

[patch."https://github.com/LiGoldragon/signal-persona.git"]
signal-persona = { path = "/tmp/cpp-deps/signal-persona" }

[patch."https://github.com/LiGoldragon/signal-mind.git"]
signal-mind = { path = "/tmp/cpp-deps/signal-mind" }

[patch."https://github.com/LiGoldragon/signal-harness.git"]
signal-harness = { path = "/tmp/cpp-deps/signal-harness" }

[patch."https://github.com/LiGoldragon/meta-signal-router.git"]
meta-signal-router = { path = "/tmp/cpp-deps/meta-signal-router" }

[patch."https://github.com/LiGoldragon/signal-sema.git"]
signal-sema = { path = "/tmp/cpp-deps/signal-sema" }
